# enumerator

./: CMakeLists.txt  README.md  enum.cpp  enum.hpp  enum_v1.cpp  enum_v1.hpp  enumerator.hpp  main.cpp  perfomance_enum.cpp  perfomance_enum_v1.cpp  test.cpp  test_enum.cpp  test_enum_v1.cpp
loop_enum/: README.md  loop_enum.hpp
